2009-01-29  Michiel Roos <michiel@netcreators.com>

	* #10271: dam calls deprecated function t3lib_div::uniqueArray() (Thanks to Uschi Renziehausen)
	* #10270: dam has multiple calls to deprecated function t3lib_div::fixed_lgd() (Thanks to Uschi Renziehausen)
	
2009-01-18  Michiel Roos <michiel@netcreators.com>

	* #8646: Click on icon before title does not react (Thanks to Uschi Renziehausen)
	
2009-01-17  Michiel Roos <michiel@netcreators.com>

	* #10171: compat directory needs cleanup
	* #9922: Debug information present in media browser

2009-01-15  Michiel Roos <michiel@netcreators.com>

	* #10149 dam should conflict with dam_info (Thanks to Michael Stucki)

2009-01-12  Michiel Roos <michiel@netcreators.com>

	* #10017 Add Icons to page:module TCEform

2008-12-26  Michiel Roos <michiel@netcreators.com>

	* #10016 added file compat/class.ux_template.php (excuse me)

2008-12-26  Michiel Roos <michiel@netcreators.com>

	* Setting version to 1.1.0
	* DAM now requires TYPO3 version 4.2.3 because of http://bugs.typo3.org/view.php?id=10016
	* Updated manual (Setup DAM-Backend-Permissions (Backend-Users/Groups))
	* Removed execute permission from Changelog and ext_update.php
	* Fixed #10015: dam tries to load $TCA['tt_news'] without checking whether tt_news is loaded (Thanks to Uschi Renziehausen)
	* Fixed #10016: DAM 1.1 relies on fix for bug 0009511 (Thanks to Michael Stucki)

2008-12-25  Benjamin Mack <benni@typo3.org>

	* Updated manual (minor spelling issues)

2008-12-24  Michiel Roos <michiel@netcreators.com>

	* Fixed #9481: Replace hard-coded reference to cc_devlog (Thanks to Francois Suter)
	* Fixed #9750: Images in RTE are not rendered in Frontend (Thanks to Gerhard Rupp and Stanislas Rolland)
	* Fixed #9921: Markers not filled during 'batch operations' (Thanks to Dan Osipov)

2008-12-23  Michiel Roos <michiel@netcreators.com>

	* DAM now requires TYPO3 version 4.2.4 because of http://bugs.typo3.org/view.php?id=9511
