@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 			'cms' => '',
 			'static_info_tables' => '',
 			'php' => '4.0.0-0.0.0',
-			'typo3' => '4.2.3-0.0.0',
+			'typo3' => '4.2.5-0.0.0',
 		),
 		'conflicts' => array(
 			'dam_file' => '',
